--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         var baseRepoURL = "https://github.com/yooooshi0911/running";
 
         // <n>を含めた新しいリポジトリURLを生成
-        var newRepoURL = baseRepoURL + n + ".git";
+        var newRepoURL = baseRepoURL + n ;
 
         // 新しいリポジトリURLをコンソールに表示
         console.log("Generated Repository URL: " + newRepoURL);
