--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         // <n>を含めた新しいリポジトリURLを生成
         var newRepoURL = baseRepoURL + n ;
 
-        // 新しいリポジトリURLをコンソールに表示
-        console.log("Generated Repository URL: " + newRepoURL);
+        // 新しいurlを表示
+        location.href("Generated Repository URL: " + newRepoURL);
     </script>
 </body>
 </html>
