--- a/index.html
+++ b/index.html
@@ -5,26 +5,22 @@
 </head>
 <body>
     <script>
-       // 現在のURLを取得
-var currentURL = window.location.href;
+        // 現在のURLを取得
+        var currentURL = window.location.href;
 
-// ユーザーに質問して回答を取得
-var userAnswer = prompt("質問に対する回答を入力してください:");
+        // ユーザーに質問して回答を取得
+        var userAnswer = prompt("質問に対する回答を入力してください:");
 
-if (userAnswer !== null) { // キャンセルされた場合は何もしない
-    // 回答をURLに追加
-    var updatedURL = currentURL + userAnswer;
+        if (userAnswer !== null) { // キャンセルされた場合は何もしない
+            // 回答をURLに追加（スラッシュを削除）
+            var updatedURL = currentURL + '/' + userAnswer.replace(/\//g, '');
 
-    // スラッシュを追加
-    updatedURL += '/';
+            // 新しいURLをコンソールに表示
+            console.log("新しいURL: " + updatedURL);
 
-    // 新しいURLをコンソールに表示
-    console.log("新しいURL: " + updatedURL);
-
-    // 新しいURLを開く
-    window.location.href = updatedURL;
-}
-
+            // 新しいURLを開く
+            window.location.href = updatedURL;
+        }
     </script>
 </body>
 </html>
