--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         if (userAnswer !== null) { // キャンセルされた場合は何もしない
             // 新しいURLを生成
-            var updatedURL = "https://yooooshi0911.github.io/running" + userAnswer + "/";
+            var updatedURL = "https://yooooshi0911.github.io/running" + userAnswer;
 
             // 新しいURLにリダイレクト
             window.location.href = updatedURL;
